--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13"
   },
   "engines": {
     "node": ">=4.2.1",
