--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "postversion": "git push --follow-tags"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -24,14 +24,12 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "engines": {
     "node": ">=4.2.1",
     "npm": ">=3"
-  },
-  "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
   }
 }
